# routes/commentRoute.js
@@ -4,5 +4,6 @@ const router = express.Router();
 const commentController = require('../controllers/commentController');
 
 router.post('/api/get_comment_replies', commentController.getCommentReplies);
-
+router.post('/api/comment', commentController.postComment);
+router.delete('/api/del_comment', commentController.deleteComment);
 module.exports = router;
